--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <main>
   <img id="p" src="http://stayathome-syllabus.greenfox.academy/week01/assets/first-website-header.png" alt="">
   <div class="h">
-    <h3 class="Abril">Hi, my name is f*king</h3>
+    <h3 class="Abril">Hi, my f*king name is</h3>
     <h1 class="Abril">Anakin Skywalker</h1>
   </div>
   <div class="px">
